traefik-odoo/gateway-class.yaml
# Ceci définit la "recette" pour une Gateway gérée par Traefik.
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-gateway-class
spec:
  controllerName: traefik.io/gateway-controller
